sema/testdata/gcc-c99-extra/reject/ucnid-7-utf8.c
void *p = &é;
void *q = &Ḁ;
